# FullStackSoftwareEngineering

./: README.md  logic.js  style.css
le/0_The_Stack/: README.md
le/1_The_Frontend/: README.md
le/1_The_Frontend/ch/9/: logic.js
le/1_frontend/ch/5/: index.html
le/2_The_Backend/: README.md
le/2_backend/: .gitignore  README.md  pyproject.toml
le/2_backend/api/: colour.py  main.py  mandlebrot.py  settings.py
le/2_backend/static/: mandelbrot.js  style.css
le/2_backend/templates/: base.html  index.html
le/2_backend/templates/components/: colour.html  config.html  iterations.html  position.html
lectures/1_The_Frontend/ch/2/: index.html
lectures/1_The_Frontend/ch/3/: index.html
lectures/1_The_Frontend/ch/4/: index.html
lectures/1_The_Frontend/ch/8/: index.html
lessons/: 1_The_Stack.md
lessons/ch/1/: index.html
lessons/ch/10/: index.html
lessons/ch/4/: index.html
lessons/ch/5/: index.html
lessons/ch/6/: index.html
lessons/ch/7/: index.html
lessons/ch/9/: index.html  logic.js
