[tool.poetry]
name = "Example Backend Package"
version = "0.0.0"
description = "An example backend"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]

[tool.poetry.dependencies]
fastapi = "^0.87.0"
python = ">=3.8,<3.12"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
