[tool.poetry]
name = "Example Backend Package"
version = "0.0.0"
description = "An example backend"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]

[tool.poetry.dependencies]
fastapi = "^0.87.0"
numpy = "^1.24.2"
python = ">=3.8,<3.12"
uvicorn = "^0.19.0"
matplotlib = "^3.7.0"
opencv-python = "^4.7.0.68"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
